# MordragT

./: Cargo.toml  README.md  flake.nix  readme.md
.github/workflows/: build.yml
src/: convert.rs  logo.rs  main.rs  profile.rs
