[package]
name = "fetchme"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
ureq = { version = "3.1", features = ["json"] }
owo-colors = "4.2"
artem = "3.0"
image = "0.25"
ansi2 = "0.3"
url = "2.5"
